Changed to Relative path for FaviconHandler.java